--- a/Transformer_runner.ipynb
+++ b/Transformer_runner.ipynb
@@ -28,6 +28,7 @@
     "from Helpers import utils\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "import numpy\n",
     "#from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
     "#import dataset as ds\n",
     "#import transformer_timeseries as tst\n"
