--- a/Transformer_runner.ipynb
+++ b/Transformer_runner.ipynb
@@ -29,6 +29,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "import numpy\n",
+    "import numpy\n",
     "#from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
     "#import dataset as ds\n",
     "#import transformer_timeseries as tst\n"
