--- a/Transformer_runner.ipynb
+++ b/Transformer_runner.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "import numpy\n",
     "import numpy\n",
+    "import numpy\n",
     "#from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
     "#import dataset as ds\n",
     "#import transformer_timeseries as tst\n"
